# r3

./: .gitignore  HACKING  HACKING.md  Makefile.am  configure.ac
doc/: HACKING.md  Makefile.am  TODO.md  cube-layout.txt
lib/libr3/: .gitignore  Makefile.am  r3.h  r3_cell_get_color.c  r3_cell_get_color.h  r3_cube_get_face.c  r3_cube_get_face.h  r3_get_cell.c  r3_get_cell.h  r3_get_facing_cell.c  r3_get_facing_cell.h  r3_init.c  r3_init.h  r3_is_solved.c  r3_is_solved.h  r3_move.c  r3_move.h  r3_sprint.c  r3_sprint.h  r3_synclinks.c  r3_synclinks.h  r3colors.h  r3cube.h  r3moves.h  r3sides.h  util.h
lib/libr3/include/: Makefile.am  r3.h  r3_cell_get_color.h  r3_get_cell.h  r3_init.h  r3_move.h
lib/libr3/include/r3/: r3.h  r3_cell_get_color.h  r3_cube_get_face.h  r3_get_cell.h  r3_init.h  r3_is_solved.h  r3_move.h  r3_sprint.h  r3_synclinks.h  r3colors.h  r3moves.h
lib/libr3/src/: Makefile.am  r3_cell_get_color.c  r3_cube_get_face.c  r3_get_cell.c  r3_init.c  r3_is_solved.c  r3_move.c  r3_sprint.c  r3_synclinks.c  r3cube.h  r3sides.h  util.h
src/: .gitignore  Makefile.am  main.c
test/: .gitignore  Makefile.am  check_libr3-core.c  check_libr3-moves.c  check_libr3.c  check_libr3.h  check_libr3.map
