#
# Copyright (C) 2014-2015 Michael T. Reece.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 2 as
# published by the Free Software Foundation.
#

if BUILD_TESTS
  MAYBE_TESTS = test/
endif

SUBDIRS = lib/libr3 src/ $(MAYBE_TESTS)
