#
# Copyright (C) 2014-2016 Michael T. Reece.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 2 as
# published by the Free Software Foundation.
#

bin_PROGRAMS = r3
r3_SOURCES = main.c
r3_LDADD = $(top_builddir)/lib/libr3/src/libr3.la
r3_CPPFLAGS = -I$(top_srcdir)/lib/libr3/include/

AM_CFLAGS = @PROJ_CFLAGS@
