#
# Copyright (C) 2014,2016 Michael T. Reece.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 2 as
# published by the Free Software Foundation.
#

lib_LTLIBRARIES = libr3.la

libr3_la_SOURCES = \
		  r3_cell_get_color.c \
		  r3_cube_get_face.c \
		  r3_get_cell.c \
		  r3_init.c \
		  r3_is_solved.c \
		  r3_move.c \
		  r3_sprint.c \
		  r3_synclinks.c \
		  util.h

include_HEADERS = \
		  r3.h \
		  r3_cell_get_color.h \
		  r3_cube_get_face.h \
		  r3_get_cell.h \
		  r3_init.h \
		  r3_is_solved.h \
		  r3_move.h \
		  r3_sprint.h \
		  r3_synclinks.h \
		  r3colors.h \
		  r3cube.h \
		  r3moves.h \
		  r3sides.h

AM_CFLAGS = @PROJ_CFLAGS@
