#
# Copyright (C) 2016 Michael T. Reece.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 2 as
# published by the Free Software Foundation.
#

include_HEADERS = \
		  r3/r3.h \
		  r3/r3_cell_get_color.h \
		  r3/r3_cube_get_face.h \
		  r3/r3_get_cell.h \
		  r3/r3_init.h \
		  r3/r3_is_solved.h \
		  r3/r3_move.h \
		  r3/r3_sprint.h \
		  r3/r3_synclinks.h \
		  r3/r3colors.h \
		  r3/r3moves.h
